Fixed overflow on checkouts and transactions tables by reducing column width on input fields and a change in how webmaster top component handles margin and width

--- a/src/app/shared/components/staff_webmaster_manager/tables/checkout-table/checkout-table.component.scss
+++ b/src/app/shared/components/staff_webmaster_manager/tables/checkout-table/checkout-table.component.scss
@@ -35,3 +35,7 @@ th {
     @apply p-0.5 rounded-md border-ingenium-grey-300 placeholder-ingenium-grey-300 font-thin
   }
 }
+
+table {
+  max-width: 100%;
+}
