--- a/src/app/shared/components/staff_webmaster_manager/tables/transaction-table/transaction-table.component.scss
+++ b/src/app/shared/components/staff_webmaster_manager/tables/transaction-table/transaction-table.component.scss
@@ -39,3 +39,11 @@ th {
     @apply p-0.5 rounded-md border-ingenium-grey-300 placeholder-ingenium-grey-300 font-thin
   }
 }
+
+td {
+  //@apply text-xs
+}
+
+table {
+  max-width: 100%;
+}
