--- a/src/styles/_staff_styles.scss
+++ b/src/styles/_staff_styles.scss
@@ -1,8 +1,8 @@
 .staffSection {
-  margin: 0.2rem;
-  margin-bottom: 0.5rem;
+  //margin: 0.2rem;
+  //margin-bottom: 0.5rem;
 
-  min-width: 80vw;
+  @apply mt-1 mb-2 mx-0;
 
   padding: 0.5rem;
   border-radius: 10px;
